Added func for diffrent waves

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Synthesizer/.vs/Synthesizer/FileContentIndex/81afe52f-ba7a-491c-98b8-3da709f15eb3.vsidx
+/Synthesizer/.vs/Synthesizer/FileContentIndex/20d4f165-2db7-4349-9861-f7b88770b16c.vsidx
+/Synthesizer/.vs/Synthesizer/FileContentIndex/9d936edd-2bef-4f68-829a-f90019c6f98a.vsidx
