Can press the bottom letter keys Z to M to play sound at diffrent frequency's starting low and going high

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Synthesizer/.vs/Synthesizer/FileContentIndex/81afe52f-ba7a-491c-98b8-3da709f15eb3.vsidx
 /Synthesizer/.vs/Synthesizer/FileContentIndex/20d4f165-2db7-4349-9861-f7b88770b16c.vsidx
 /Synthesizer/.vs/Synthesizer/FileContentIndex/9d936edd-2bef-4f68-829a-f90019c6f98a.vsidx
+/Synthesizer/.vs/Synthesizer/FileContentIndex/7071bd6e-2fb4-43b0-84b6-bf128b5ef2e1.vsidx
